--- a/app/src/main/res/layout/activity_last_match_detail.xml
+++ b/app/src/main/res/layout/activity_last_match_detail.xml
@@ -7,8 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="5dp">
+        android:layout_height="match_parent">
 
         <ProgressBar
             android:id="@+id/progressBarDetail"
@@ -19,7 +18,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="8dp">
 
             <TextView
                 android:id="@+id/textViewLeague"
